# test_task_4

./: .gitignore  README.md  pyproject.toml
data/: schema.sqlite.sql  seed.sqlite.sql
src/registration_port/: __main__.py  cli.py  db.py  results.py  service.py
tests/: conftest.py  test_acceptance.py  test_registration_service.py
